--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2249,7 +2249,24 @@ algorithm.}
 The remaining sets of size 2 have the form
 $\{(a_0,b_0,0), (a_1, b_1, 1)\}$, and
 a \ldto for such sets can be computed by
-Algorithm~\ref{alg:ld-2}, as described in the box below.
+Algorithm~\ref{alg:ld-2}, described in the box below.
+
+\newcommand{\Cayley}{\ensuremath{\mathsf{C}}}
+Some new notation will be helpful here.  Suppose that $ u \in \Sg^{\alg{A}}(X)$.
+Then there is a term $t$ of some arity $k$ that, when applied to a certain tuple of 
+generators $(x_1, \dots, x_k)$, produces $u$.  
+In this situation, we may ask for the operation table (or ``Cayley table'') 
+for $t^{\alg{A}}$, which is an $A^k$-dimensional array whose $(a_1, \dots, a_k)$-entry
+is the value $t^{\alg{A}}(a_1, \dots, a_k)$, and whose 
+$(x_1, \dots, x_k)$-entry is the value $t^{\alg{A}}(x_1, \dots, x_k) = u$.  
+Below we will encounter a situation in which we don't want to construct the syntactic
+term that produced the element $u$ from generators, but we do want to construct 
+the table of the corresponding term operation.
+That is, we want to know the value $t^{\alg{A}}(a_1, \dots, a_k)$ for all inputs from $A^k$.
+For this purpose, we will use the notation $\Cayley_{x_1,\dots, x_k \mid u}$ to 
+refer to such an operation table. 
+% (This is simply a notational device, not a well-defined mathematical object.)
+
 % (In the following algorithm descriptions,
 % we continue to use the shorthand notations established above,
 % such as $\thetaj := \Cg^{\alg{A}}(a_j, b_j)$.)
@@ -2258,28 +2275,29 @@ Algorithm~\ref{alg:ld-2}, as described in the box below.
 \RestyleAlgo{boxruled}
 \LinesNumbered
 \begin{algorithm}%[ht]
-  \SetKwInOut{Input}{Input}
-  \SetKwInOut{Output}{Output}
+  % \SetKwInOut{Input}{Input}
+  % \SetKwInOut{Output}{Output}
 
-  \caption{\ldto table for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$\label{alg:ld-2}}
-  \Input{$S = \{(a_0,b_0,0), (a_1, b_1, 1)\}$}
-  \Output{$(n\times n)^3$-array (table) for an operation in $\dtr S$}
+  \KwIn{$S = \{(a_0,b_0,0), (a_1, b_1, 1)\}$}
+  \KwOut{$(n\times n)^3$-array (table) for an operation in $\dtr S$}
 
-  compute $\delta_0 = \com{ \theta_0 }$ and form $C_0= (a_0/\delta_0) \times \{b_1\}$;
-
-  compute $S_0=\Sg^{\alg{A}\times \alg{A}} ((a_0,a_1),(b_0,a_1),(b_0,b_1))$;
-
-  find an element $(u,v)  \in C_0 \cap S_0$;
-
-  return the table for the operation that produced $(u,v)$. 
+  compute $\delta_0 = \com{ \theta_0 }$ and form $C_0= (a_0/\delta_0) \times \{b_1\}$\;
+  compute $S_0=\Sg^{\alg{A}\times \alg{A}} ((a_0,a_1),(b_0,a_1),(b_0,b_1))$\;
+  \ForAll{$(u,v)  \in S_0$} {
+    compute the table $\Cayley_{(a_0,a_1),(b_0,a_1),(b_0,b_1)\mid (u,v)}$\;
+    \If{$(u,v) \in C_0 \cap S_0$} {
+    add $\Cayley_{(a_0,a_1),(b_0,a_1),(b_0,b_1) \mid (u,v)}$ to list $L$\;
+    }
+  }
+  \Return $L$.
+  \caption{\ldto tables for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$}
+  \label{alg:ld-2}
   % in the $((a_0,a_1),(b_0,a_1),(b_0,b_1))$ position
 
 \end{algorithm}
-The table returned by Algorithm~\ref{alg:ld-2} represents a ternary operation
-$t : (A\times A)^3 \to A\times A$, and the value at 
-position $((a_0,a_1),(b_0,a_1),(b_0,b_1))$ of the table is an element $(u,v)$ belonging 
-to $C_0 \cap S_0$.
-
+Each table returned by Algorithm~\ref{alg:ld-2} represents a ternary operation of type
+$(A\times A)^3 \to A\times A$, whose value at $((a_0,a_1),(b_0,a_1),(b_0,b_1))$ is 
+an element of $C_0 \cap S_0$.
 
 We postpone the implementation details and computational complexity analysis of 
 of Algorithm~\ref{alg:ld-2} (see Section~\ref{sec:cc-ld-2}) and 
@@ -2295,19 +2313,17 @@ The following notation will be useful.
 %$\sA_2 := \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\}$, $\dots$,
 For $k > 0$, $\sA_{2k} := \sA_{2k-1} \cup \{(a_k,b_k,1)\}$  and $\sA_{2k+1} := \sA_{2k} \cup \{(a_{k+1},b_{k+1},0)\}$.
 
-The output of Algorithm~\ref{alg:ld-2} is the table of a 
-\ldto for $\sA_0$ which will be input to Algorithm~\ref{alg:stream-ldt1},
-the output of which is the table of a \ldto operation for $\sA_1$.
-The output of Algorithm~\ref{alg:stream-ldt1} is input to
-Algorithm~\ref{alg:stream-ldt2}, the result of which is
-the table of a \ldto for $\sA_2$.
+The output of Algorithm~\ref{alg:ld-2} is a list of Cayley tables of
+\ldtos for $\sA_0$, and this list is input to Algorithm~\ref{alg:stream-ldt1},
+the output of which is a list of Cayley tables of \ldtos for $\sA_1$.
+The latter will be input to Algorithm~\ref{alg:stream-ldt2}, the result of which is
+a list of Cayley tables of \ldtos for $\sA_2$.
 Thereafter, the process alternates between
 Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
 This procedure terminates when we find 
-the table of a \ldto operation for $\sA_{2n} = A^2 \times \{0,1\}$,
-since that will be the 
-table of a difference term operation for $\alg A$ (as we saw in 
-Corollary~\ref{cor:loc-diff-term} above).
+the Cayley table of a \ldto for $\sA_{2n} = A^2 \times \{0,1\}$,
+since that will represent a difference term operation for $\alg A$ (as noted
+in Corollary~\ref{cor:loc-diff-term}).
 
 For $i\geq 0$, let
 \begin{align*}
@@ -2373,6 +2389,8 @@ Recall the notation introduced in Section~\ref{sec:algorithm-its-time}:
 k_i&= \text{ the number of basic operations of arity~$i$},\\ 
 r &= \text{ the largest arity of the basic operations of $\alg{A}$.}
 \end{align*}
+Also, $\Cayley_{(a_0,a_1),(b_0,a_1),(b_0,b_1)|(u,v)}$ denotes the Cayley table of a
+term operation that generates $(u,v)$ from the set $\{(a_0,a_1),(b_0,a_1),(b_0,b_1)\}$.
 % The complexity bounds in this section are easily derivable 
 % from Proposition~\ref{speedprop}.
 
@@ -2381,14 +2399,15 @@ Algorithm~\ref{alg:ld-2} can be implemented as follows:
 \item compute $\thetao$, in time $crm$;
 \item compute $C_0= a_0/\com{ \thetao } \times \{b_1\}$,
 in time $c(rm^2 + n^5)$;
-\item generate $S_0$, %a subuniverse of $\alg{A}\times \alg{A}$,
-  in time $c r m^2$;
-  \begin{enumerate}
-  \item for each new element of $S_0$, compute the full
-    table of the operation that produced it;
-  \item if $(u,v) \in C_0$, then return the operation table from (3a);
-    else, cache the table and continue generating $S_0$.
-  \end{enumerate}
+\item generate $S_0=\Sg^{\alg{A}\times \alg{A}} \{(a_0,a_1),(b_0,a_1),(b_0,b_1)\}$,
+  in time $c r m^2$;\\
+for each newly generated $(u,v) \in S_0$, 
+  \begin{itemize}
+  \item construct and store the table
+    $\Cayley_{(a_0,a_1),(b_0,a_1),(b_0,b_1)|(u,v)}$;
+  \item if $(u,v) \in C_0$, then add $\Cayley_{(a_0,a_1),(b_0,a_1),(b_0,b_1)|(u,v)}$
+   to the list of tables to be returned; 
+  \end{itemize}
 \end{enumerate}
 
 %% (There are at most $|A|^2$ ($\geq |S_0|$) such tables, and,
@@ -2396,8 +2415,8 @@ in time $c(rm^2 + n^5)$;
 %% the cost of storing a table at each step is $n^3$.) 
 Each element $(u,v)\in S_0$ is the result of applying some (say, $k$-ary)
 basic operation $f$ to previously generated pairs $(u_1, v_1)$, $\dots$, $(u_k,v_k)$
-from $S_0$, and the operation tables producing these pairs were
-already stored (at Step (3a)).  Thus, to compute the table
+from $S_0$, and the operation tables generating these pairs were
+already stored (the first bullet of Step 3).  Thus, to compute the table
 for the operation that produced $(u,v) = f((u_1,v_1),\dots, (u_k,v_k))$
 we simply compose $f$ with previously stored operation tables.
 Since all tables represent ternary operations, the time-complexity of this composition
@@ -2406,10 +2425,9 @@ $kn^3 \leq rn^3$.
 
 All told, the computational complexity of a single run of
 Algorithm~\ref{alg:ld-2} is at most $crm + c(rm^2 + n^5) + c r^2m^2n^3$.
-We only need to run the algorithm once since, as soon as a \ldto is found for
-a single (arbitrary) triple of the form $((a,a'),(b,a'),(b,b'))$,
-we move on to Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}
-(below).
+We only need to run the algorithm once since, as soon as we find all the
+\ldto tables for elements generated by one triple of the form $((a,a'),(b,a'),(b,b'))$,
+we move on to Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
 
 (An equivalent approach, that may be easier to implement in software is
 to partially produce the subalgebra of $\alg{A}^{\alg{A}^3}$ generated by
