--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -76,6 +76,7 @@
 \newcommand{\sansA}{\ensuremath{\mathsf{A}}}
 \newcommand{\sansComp}{\ensuremath{\mathsf{comp}}}
 \newcommand{\sansC}{\ensuremath{\mathsf{C}}}
+\newcommand{\sansG}{\ensuremath{\mathsf{G}}}
 \newcommand{\sansH}{\ensuremath{\mathsf{H}}}
 \newcommand{\sansO}{\ensuremath{\mathsf{O}}} % ALL FINITARY OPERATIONS
 \newcommand{\sansP}{\ensuremath{\mathsf{P}}}
@@ -169,8 +170,11 @@
 \newcommand{\scS}{\ensuremath{\mathscr{S}}}
 \newcommand{\sC}{\ensuremath{\mathcal{C}}}
 \newcommand{\sU}{\ensuremath{\mathcal{U}}}
+\newcommand{\sG}{\ensuremath{\mathcal{G}}}
 \newcommand{\sI}{\ensuremath{\mathcal{I}}}
 \newcommand{\sK}{\ensuremath{\mathcal{K}}}
+\newcommand{\sL}{\ensuremath{\mathcal{L}}}
+\newcommand{\scL}{\ensuremath{\mathscr{L}}}
 \newcommand{\sM}{\ensuremath{\mathcal{M}}}
 \newcommand{\sW}{\ensuremath{\mathcal{W}}}
 \newcommand{\sR}{\ensuremath{\mathcal{R}}}
