--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2383,7 +2383,7 @@ Then $\sC \dtr \sA_{2k+1} = \{\Cayley \in \sC \eta_{\kk} \mid  \alpha \mathrel{\
 \begin{algorithm}
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
-  \caption{Generate the set of Cayley tables of all \ldtos for $\sA_{2k}$ \label{alg:stream-ldt2} {\small ($k> 0$)}}
+  \caption{Generate the set of all Cayley tables of \ldtos for $\sA_{2k}$ \label{alg:stream-ldt2} {\small ($k> 0$)}}
   \Input{$\sC \zeta_{\kminus}$ and $\sC \dtr \sA_{2\kminus}$}
   \Output{$\cC \zeta_{\kk}$ and $\sC \dtr \sA_{2k}$}
 
