(Sec 5) add reminder to explain s_{2k} and s_{2k-1} in algs 2 & 3

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2338,6 +2338,7 @@ For $\sS$ a set of term operations, let $\sC \sS$ denote the set of
 all Cayley tables of operations in $\sS$. 
 
 
+\wjd{Todo: explain where $s_{2k}$ comes from in Alg 2.}
 \RestyleAlgo{boxruled}
 \LinesNumbered
 \begin{algorithm}
@@ -2396,6 +2397,8 @@ Then $\sC \dtr \sA_{2k+1} = \{\Cayley \in \sC \eta_{\kk} \mid  \alpha \mathrel{\
 
   Return $\sC \zeta_{\kk}$ and $\sC \sA_{2k}$.
 \end{algorithm}
+
+\wjd{Todo: explain where $s_{2k-1}$ comes from.}
 
 \subsection{Computational Complexity of Algorithm~\ref{alg:ld-2}}
 \label{sec:cc-ld-2}
