--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1023,7 +1023,7 @@ $\emptyset \subset \sigma\subset \nn$.
 
 The next four lemmas assume the context above, which for convenience
 we will denote by $\Gamma$; that is,
-``\emph{Assume $\Gamma$}'' will mean ``Assume $\sS$, $\alg{B}$, $n$, $\{\alg{A}_i \mid i < n\}$,
+``\emph{Assume $\Gamma$}'' will mean ``Assume $\sS$, $\alg{B}$, $n$, $\{\alg{A}_i \colon i < n\}$,
 $\alpha$, $\beta$, $U$, and $\rho_\sigma$ are as described above.''
 
 
@@ -1898,8 +1898,8 @@ to denote the maps defined as follows:
 \begin{align*}
   \text{for }\;  & S \subseteq A^2 \times \{0,1\}\; \text{ and } \;T \subseteq \Clo_3(\alg{A}),
   \text{ let }\\
-  \dtr S &= \{t \in \Clo_3(\alg{A}) \mid (s,t) \in \dtr \text{ for all } s \in S\}, \text{ and }\\
-  \breve{\dtr} T &= \{s \in A^2 \times \{0,1\} \mid (s,t) \in \dtr \text{ for all } t \in T\}.
+  \dtr S &= \{t \in \Clo_3(\alg{A}) \colon (s,t) \in \dtr \text{ for all } s \in S\}, \text{ and }\\
+  \breve{\dtr} T &= \{s \in A^2 \times \{0,1\} \colon (s,t) \in \dtr \text{ for all } t \in T\}.
 \end{align*}
 In other words, $\dtr S$ is the set of \ldtos
 for $S$, and $\breve{\dtr} T$ is the set of triples for which every $t\in T$
@@ -2301,7 +2301,7 @@ an element of $C_0 \cap S_0$.
 
 We postpone the implementation details and computational complexity analysis
 of Algorithm~\ref{alg:ld-2} (see Section~\ref{sec:cc-ld-2}) and 
-proceed directly to the inductive stage of our method,
+proceed directly to the inductive stages of our method,
 for which Algorithm~\ref{alg:ld-2} serves as a base case. 
 The following notation will be useful.
 \begin{align*}
@@ -2322,23 +2322,20 @@ Thereafter, the process alternates between
 Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
 This procedure terminates when we find 
 the Cayley table of a \ldto for $\sA_{2n^2-1} = A^2 \times \{0,1\}$,
-since that will be the table of a difference term operation for $\alg A$ (as noted
+which is the table of a difference term operation for $\alg A$ (as noted
 in Corollary~\ref{cor:loc-diff-term}).
 
+\subsubsection{Induction Stage 1}
+For a set $\sS$ of term operations, let $\sC \sS$ denote the set of 
+all Cayley tables of operations in $\sS$. 
 For $i\geq 0$, let
 \begin{align*}
-\zeta_i &:= \dtr \{(a_i, b_i, 0)\}, \\
-  \zeta_{\kk} &:= \bigcap_{0\leq i < k}\zeta_i
-  =\dtr \{(a_0, b_0, 0), (a_1, b_1, 0), \dots, (a_{k-1}, b_{k-1}, 0)\},\\
   \eta_i &:= \dtr \{(a_i, b_i, 1)\},\\
   \eta_{\kk} &:= \bigcap_{0\leq i < k}\eta_i
   =\dtr \{(a_0, b_0, 1), (a_1, b_1, 1), \dots, (a_{k-1}, b_{k-1}, 1) \}.
 \end{align*}
-For $\sS$ a set of term operations, let $\sC \sS$ denote the set of 
-all Cayley tables of operations in $\sS$. 
 
 
-\wjd{Todo: explain where $s_{2k}$ comes from in Alg 2.}
 \RestyleAlgo{boxruled}
 \LinesNumbered
 \begin{algorithm}
@@ -2348,36 +2345,57 @@ all Cayley tables of operations in $\sS$.
   \Input{$\sC \eta_{\kk}$ and $\sC \dtr \sA_{2k}$}
   \Output{$\cC \eta_{\kplus}$ and $\sC \dtr \sA_{2k+1}$}
 
-  Build the set $\sG := \sC \eta_{\kk}  \cap \sC \dtr \{ (a_{k+1}, s_{2k}(a_{k+1}, b_{k+1}, b_{k+1}), 0)\}$.
+  For each $\Cayley_j \in \sC \dtr \sA_{2k}$, form 
+  \[
+  \sG_j := \sC \eta_{\kk}  \cap \sC \dtr \{ (a_{k+1}, \Cayley_j[a_{k+1}, b_{k+1}, b_{k+1}], 0)\}.
+  \]
 
-  For each $\sansG \in \sG$, define $\Cayley[x,y,z] = \sansG[x, s_{2k}(x,y,y), s_{2k}(x,y,z)]$; let 
-  $\sC \sA_{2k+1}$ be the set of tables so defined.
-
-  Build the set $\sC \eta_{\kplus} := \{\Cayley \in \eta_{\kplus} \mid \Cayley[a_k,a_k,b_k]= b_k \}$
-
+  For each $\sansG_{j_i} \in \sG_j$, define the table $\Cayley_{j_i}$ as follows:
+  $\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[x, \Cayley_j[x,y,y], \Cayley_j[x,y,z]]$. \\[5pt]
+  Let $\sC \sA_{2k+1} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
+  Build the set $\sC \eta_{\kplus} := \{\Cayley \in \eta_{\kk} \colon \Cayley[a_k,a_k,b_k]= b_k \}$.\\[5pt]
   Return $\sC \eta_{\kplus}$ and $\sC \sA_{2k+1}$.
 \end{algorithm}
 
-\subsection{Implementation of Algorithm~\ref{alg:stream-ldt1}}
-Given the set $\sC \eta_{\kk}$ of tables of all operations in
-$\eta_{\kk} = \dtr \{(a_0, b_0, 1), \dots, (a_{k-1}, b_{k-1}, 1) \}$, and
-the set $\sC \dtr \sA_{2k}$ of tables of all operations in $\dtr \sA_{2k}$,
-Algorithm~\ref{alg:stream-ldt1} should return the sets
+\subsubsection{Implementation of Algorithm~\ref{alg:stream-ldt1}}
+Given the sets $\sC \eta_{\kk}$
+and $\sC \dtr \sA_{2k}$, of all tables of operations in 
+$\eta_{\kk}$ and $\dtr \sA_{2k}$, respectively,
+Algorithm~\ref{alg:stream-ldt1} returns the sets
 $\sC \eta_{\kplus}$ and $\sC \dtr \sA_{2k+1}$.
-To start we find tables of all operations in the set
-$\eta_{\kk}\cap \dtr \{ (a_{k+1}, s_{2k}(a_{k+1}, b_{k+1}, b_{k+1}), 0)\}$.
-% \[\dtr \{(a_0, b_0, 1), \dots, (a_{k-1}, b_{k-1}, 1), (a_{k+1}, s_{2k}(a_{k+1}, b_{k+1}, b_{k+1}), 0) \}.\]
-Let $\alpha := a_{k+1}$ and $\sigma := s_{2k}(a_{k+1}, b_{k+1}, b_{k+1})$ in the definition: 
-\[
-t \in \dtr \{(\alpha,\sigma,0)\} \quad \iff \quad \alpha \comr{\theta_{\alpha \sigma}} t^{\alg{A}}(\alpha, \sigma, \sigma).
-\]
-Compute $\theta_{\alpha \sigma} := \Cg^{\alg{A}} (a_{k+1}, s_{2k}(a_{k+1}, b_{k+1}, b_{k+1}))$
-and $\delta_{\alpha\sigma} := \com{\theta_{\alpha\sigma}}$. 
-% Let $\mathbf{a} := (a_0, a_1, \dots, a_k, \alpha)$, $\mathbf{b} := (b_0, b_1, \dots, b_k, \sigma)$, $\mathbf{b'}:= (b_0, b_1, \dots, b_k, \sigma)$.
-% and compute $S_k = \Sg^{\alg{A}^{k+2}}\{\mathbf a, \mathbf b, \mathbf b'\}$.
-Then $\sC \dtr \sA_{2k+1} = \{\Cayley \in \sC \eta_{\kk} \mid  \alpha \mathrel{\delta_{\alpha \sigma}} \Cayley [\alpha, \sigma, \sigma] \}$.
+Building the set $\sC \eta_{\kplus}$ is trivial.  We simply remove 
+from $\sC \eta_{\kk}$ every table whose $(a_k,a_k,b_k)$-entry is not $b_k$.
+As for $\sC \dtr \sA_{2k+1}$,
+for each table $\Cayley_j \in \sC \dtr \sA_{2k}$,
+let 
+$c_j:= \Cayley_j[a_{k+1}, b_{k+1}, b_{k+1}]$ and compute
+$\gamma := \Cg^{\alg{A}}(a_{k+1}, c_j)$ and $\delta := \com{\gamma}$. % (in $O(rm^2 + n^5)$ time).
+Next construct the tables in the set
+$\eta_{\kk}\cap \dtr \{ (a_{k+1}, c_j, 0)\}$, according to the usual
+definition: 
+$t \in \dtr \{(a_{k+1},c_j,0)\}$ iff $a_{k+1} \comr{\gamma} t^{\alg{A}}(a_{k+1},c_j,c_j)$.
+Thus 
+$\sG_j = \{\Cayley \in \sC \eta_{\kk} \colon  a_{k+1} \mathrel{\delta} \Cayley [a_{k+1}, c_j, c_j]\}$.
+For each $\sansG_{j_i} \in \sG_j$, define the operation table $\Cayley_{j_i}$ as follows:
+for all $x$, $y$, $z \in A$, $\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[x, \Cayley_j[x,y,y], \Cayley_j[x,y,z]]$. 
+The set of all tables so defined is $\sC \sA_{2k+1}$.
 
 
+
+
+
+
+
+
+
+
+\subsubsection{Induction Stage 2}
+For $i\geq 0$, let
+\begin{align*}
+\zeta_i &:= \dtr \{(a_i, b_i, 0)\}, \\
+  \zeta_{\kk} &:= \bigcap_{0\leq i < k}\zeta_i
+  =\dtr \{(a_0, b_0, 0), (a_1, b_1, 0), \dots, (a_{k-1}, b_{k-1}, 0)\}.
+\end{align*}
 
 \RestyleAlgo{boxruled}
 \LinesNumbered
@@ -2385,22 +2403,47 @@ Then $\sC \dtr \sA_{2k+1} = \{\Cayley \in \sC \eta_{\kk} \mid  \alpha \mathrel{\
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
   \caption{Generate the set of all Cayley tables of \ldtos for $\sA_{2k}$ \label{alg:stream-ldt2} {\small ($k> 0$)}}
-  \Input{$\sC \zeta_{\kminus}$ and $\sC \dtr \sA_{2\kminus}$}
+  \Input{$\sC \zeta_{\kminus}$ and $\sC \dtr \sA_{2k-1}$}
   \Output{$\cC \zeta_{\kk}$ and $\sC \dtr \sA_{2k}$}
 
-  Build the set $\sG := \sC \zeta_{\kminus}  \cap \sC \dtr \{(s_{2k-1}(a_k, a_k, b_k), b_k, 1) \}$.
+  For each $\Cayley_j \in \sC \dtr \sA_{2k-1}$, form 
+  \[
+  \sG_j := \sC \eta_{\kminus}  \cap \sC \dtr \{ (\Cayley_j[a_k, a_k, b_k], b_k, 1), 1)\}.
+  \]
 
-  For each $\sansG \in \sG$, let $\Cayley[x,y,z] = \sansG[s_{2k-1}(x,y,z), s_{2k-1}(y,y,z),z]$;
-  let $\sC \sA_{2k}$ be the set of tables so defined.
-
-  Build the set $\sC \zeta_{\kk} := \{\Cayley \in \zeta_{\kminus} \mid a_{k-1} \mathrel{\delta_{k-1}} \Cayley[a_{k-1},b_{k-1},b_{k-1}]\}$.
-
+  For each $\sansG_{j_i} \in \sG_j$, define the table $\Cayley_{j_i}$ as follows:
+  $\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[\Cayley_j[x,y,z], \Cayley_j[y,y,z], z]$. \\[5pt]
+  Let $\sC \sA_{2k} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
+  Build the set $\sC \zeta_{\kk} := \{\Cayley \in \zeta_{\kminus} \colon a_{k-1} \mathrel{\delta_{k-1}} \Cayley[a_{k-1},b_{k-1},b_{k-1}] \}$.\\[5pt]
   Return $\sC \zeta_{\kk}$ and $\sC \sA_{2k}$.
 \end{algorithm}
 
-\wjd{Todo: explain where $s_{2k-1}$ comes from.}
+\subsubsection{Implementation of Algorithm~\ref{alg:stream-ldt2}}
+Given the sets $\sC \zeta_{\kminus}$
+and $\sC \dtr \sA_{2k-1}$, of all tables of operations in 
+$\zeta_{\kminus}$ and $\dtr \sA_{2k-1}$, respectively,
+Algorithm~\ref{alg:stream-ldt2} returns the sets
+$\sC \zeta_{\kk}$ and $\sC \sA_{2k}$.
+To build $\sC \dtr \sA_{2k}$, take each table $\Cayley_j$ from $\sC \dtr \sA_{2k-1}$
+and set $c_j:= \Cayley_j[a_k, a_k, b_k]$. Then, let $\sG_j$ denote 
+the set of tables in $\sC \zeta_{\kminus}$ whose 
+$(c_j, c_j, b_k)$-entry is equal to $b_k$. 
+For each $\sansG_{j_i} \in \sG_j$, define the operation table 
+$\Cayley_{j_i}$ as follows:
+for all $x$, $y$, $z \in A$, 
+$\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[\Cayley_j[x,y,z], \Cayley_j[y,y,z], z]$. 
+The set of all tables so defined is $\sC \sA_{2k}$.
+Finally, to build the set $\sC \zeta_{\kk}$, we 
+compute $\gamma_{k-1} := \Cg^{\alg{A}}(a_{k-1}, b_{k-1})$ and $\delta := \com{\gamma_{k-1}}$,
+and then remove from $\sC \zeta_{\kminus}$ every table whose 
+$(a_{k-1},b_{k-1},b_{k-1})$-entry is not congruent to $a_{k-1}$ modulo $\delta_{k-1}$.
 
-\subsection{Computational Complexity of Algorithm~\ref{alg:ld-2}}
+
+
+
+
+
+\subsection{Implementation and Complexity of Algorithm 1}
 \label{sec:cc-ld-2}
 % Here we discuss the implementation details and analyze the computational 
 % cost of Algorithm~\ref{alg:ld-2}, using the notation introduced in
@@ -2418,11 +2461,11 @@ term operation that generates $(u,v)$ from the set $\{(a_0,a_1),(b_0,a_1),(b_0,b
 
 Algorithm~\ref{alg:ld-2} can be implemented as follows:
 \begin{enumerate}
-\item compute $\thetao$, in time $crm$;
+\item compute $\thetao$, in time $O(rm)$;
 \item compute $C_0= a_0/\com{ \thetao } \times \{b_1\}$,
-in time $c(rm^2 + n^5)$;
+in time $O(rm^2 + n^5)$;
 \item generate $S_0=\Sg^{\alg{A}\times \alg{A}} \{(a_0,a_1),(b_0,a_1),(b_0,b_1)\}$,
-  in time $c r m^2$;\\
+  in time $O(r m^2)$;\\
 for each newly generated $(u,v) \in S_0$, 
   \begin{itemize}
   \item construct and store the table
@@ -2446,31 +2489,11 @@ is $|A|^3$-steps multiplied by $k$ reads per step; that is,
 $kn^3 \leq rn^3$.
 
 All told, the computational complexity of a single run of
-Algorithm~\ref{alg:ld-2} is at most $crm + c(rm^2 + n^5) + c r^2m^2n^3$.
+Algorithm~\ref{alg:ld-2} is $O(rm + rm^2 + n^5 + r^2m^2n^3) = O(n^5 + r^2m^2n^3)$.
 We only need to run the algorithm once since, as soon as we find all the
 \ldto tables for elements generated by one triple of the form $((a,a'),(b,a'),(b,b'))$,
 we move on to Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
 
-\begin{comment}
-(An equivalent approach, that may be easier to implement in software is
-to partially produce the subalgebra of $\alg{A}^{\alg{A}^3}$ generated by
-the three $|A|^3$-tuples
-$g_0 = (a_0, a_1, \dots)$,
-$g_1 = (b_0, a_1, \dots)$,
-$g_2 = (b_0, b_1, \dots)$,
-each of which is extended so that every 
-triple from $A^3$ is represented as $(g_0(i), g_1(i), g_2(i))$ for some 
-unique $i$.  Producing the entire subuniverse will be expensive in 
-general, but we only need to pay attention to the first two coordinates. 
-At each step, we check for a tuple $u = (u_0, u_1, u_2, \dots)$ such that
-$(u_0, u_1)\in C_0 \cap S_0$.  If we find one, then the entire tuple $u$ stores
-the table for a \ldto for $((a_0, b_0, 0), (a_1, b_1, 1))$ and we can stop.
-At the end of each of these closure steps, we check for 
-tuples $v = (v_0, v_1, \dots)$ for which the pair $(v_0, v_1)$ has not
-yet appeared.  If no new pairs of this form are found, the algorithm halts
-and we conclude that no \ldto exists for this pair.)
-  % The runtime of this procedure is bounded by $|A|^2$.)
-\end{comment}
 
 
 
@@ -2560,7 +2583,7 @@ To start off the algorithm requires three initial steps.
 Thereafter these three steps are iterated, for $k> 0$.
 \begin{enumerate}
   \item Compute $\theta_{k} := \Cg^{\alg{A}}(a_k, b_k)$ and $\delta_{k} := \com{\theta_{k}}$.
-  \item Let $L_{2k} := \{\mathsf{C} \in L_{2k-1} \mid \mathsf{C}[a_k, b_k, b_k] \mathrel{\delta_{k}} a_k \}$.
+  \item Let $L_{2k} := \{\mathsf{C} \in L_{2k-1} \colon \mathsf{C}[a_k, b_k, b_k] \mathrel{\delta_{k}} a_k \}$.
   \item Let $L_{2k+1} := \mathbf{filter} \; L_{2k} \; \mathbf{with} \; \mathsf{C}[a_k, a_k, b_k] = b_k$.
 \end{enumerate}
 The second and third steps are simple filtering operations:
@@ -2591,6 +2614,25 @@ for each newly generated $(u,v) \in S_0$,
 \bibliography{inputs/refs}
 
 \end{document}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%  END OF DOCUMENT %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \begin{comment}
 \noindent \underline{\textbf{Subroutine \ld-2'}}\\[4pt]
@@ -3228,8 +3270,6 @@ some abelian group. It is easy that $x - y + z$ is a minority
 if and only if the abelian group has exponent~2.
 \end{proof}
 
-
-\end{document}
 
 
 Let $\alg A$ be an algebra and let $S$ and $T$ be tolerances
