--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -2352,9 +2352,9 @@ For $i\geq 0$, let
       $\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[x, \Cayley_j[x,y,y], \Cayley_j[x,y,z]]$.
     }
   }
-  Let $\sC \sA_{2k+1} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
+  Let $\sC \dtr \sA_{2k+1} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
   Build the set $\sC \eta_{\kplus} := \{\Cayley \in \eta_{\kk} \colon \Cayley[a_k,a_k,b_k]= b_k \}$.\\[5pt]
-  \Return $\sC \eta_{\kplus}$ and $\sC \sA_{2k+1}$.
+  \Return $\sC \eta_{\kplus}$ and $\sC \dtr \sA_{2k+1}$.
   \caption{Generate the set of all Cayley tables of \ldtos for $\sA_{2k+1}$ \label{alg:stream-ldt1} {\small ($k\geq 0$)}}
 \end{algorithm}
 
@@ -2407,9 +2407,9 @@ For $i\geq 0$, let
       $\Cayley_{j_i}[x,y,z] :=  \sansG_{j_i}[\Cayley_j[x,y,z], \Cayley_j[y,y,z], z]$. \\[5pt]
     }
   }
-  Let $\sC \sA_{2k} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
+  Let $\sC \dtr \sA_{2k} := \{\Cayley_{j_i}: i, j\}$ be the set of all tables so defined.\\[5pt]
   Build the set $\sC \zeta_{\kk} := \{\Cayley \in \zeta_{\kminus} \colon a_{k-1} \mathrel{\delta_{k-1}} \Cayley[a_{k-1},b_{k-1},b_{k-1}] \}$.\\[5pt]
-  \Return $\sC \zeta_{\kk}$ and $\sC \sA_{2k}$.
+  \Return $\sC \zeta_{\kk}$ and $\sC \dtr \sA_{2k}$.
   \caption{Generate the set of all Cayley tables of \ldtos for $\sA_{2k}$ \label{alg:stream-ldt2} {\small ($k> 0$)}}
 \end{algorithm}
 
